--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"name": "api-gestion-gastos",
 	"version": "1.0.0",
+	"type": "module",
 	"description": "La API de Gestión de Gastos es una herramienta diseñada para ayudarte a organizar y registrar tus gastos personales o grupales de manera efectiva. Esta API permite a los usuarios crear categorías personalizadas, registrar gastos asociados a esas categorías y gestionar grupos de gastos compartidos entre múltiples usuarios.",
 	"main": "index.js",
 	"scripts": {
